--- a/Project/Client/Views/Home/Index.cshtml
+++ b/Project/Client/Views/Home/Index.cshtml
@@ -225,6 +225,7 @@
                             }
                         }
                     </div>
+
                     <div class="info_other">
                         <h1>@product.Name</h1>
                         <p>
@@ -232,21 +233,17 @@
                                 ? product.Description.Substring(0, 100) + "..."
                                 : product.Description)
                         </p>
-                        @* <a asp-controller="Product" asp-action="ProductDetail" asp-route-Id="@product.Id" class="btn_orther">Read More</a> *@
                         <div class="row">
                             <a asp-controller="Product" asp-action="ProductDetail" asp-route-Id="@product.Id" class="col-md-6 btn_orther text-center">Read More</a>
                             <div class="col-md-3"></div>
-                            @* Day la trai tym ne *@
-                            <div title="Wishlist" class="col-md-3 heart-container" style="width:20px;height:20px;  ">
+                            <div title="Wishlist" class="col-md-3 heart-container" style="width:20px;height:20px;">
                                 <input id="Give-It-An-Id" class="checkbox" type="checkbox">
                                 <div class="svg-container">
                                     <svg xmlns="http://www.w3.org/2000/svg" class="svg-outline" viewBox="0 0 24 24">
-                                        <path d="M17.5,1.917a6.4,6.4,0,0,0-5.5,3.3,6.4,6.4,0,0,0-5.5-3.3A6.8,6.8,0,0,0,0,8.967c0,4.547,4.786,9.513,8.8,12.88a4.974,4.974,0,0,0,6.4,0C19.214,18.48,24,13.514,24,8.967A6.8,6.8,0,0,0,17.5,1.917Zm-3.585,18.4a2.973,2.973,0,0,1-3.83,0C4.947,16.006,2,11.87,2,8.967a4.8,4.8,0,0,1,4.5-5.05A4.8,4.8,0,0,1,11,8.967a1,1,0,0,0,2,0,4.8,4.8,0,0,1,4.5-5.05A4.8,4.8,0,0,1,22,8.967C22,11.87,19.053,16.006,13.915,20.313Z">
-                                        </path>
+                                        <path d="M17.5,1.917a6.4,6.4,0,0,0-5.5,3.3,6.4,6.4,0,0,0-5.5-3.3A6.8,6.8,0,0,0,0,8.967c0,4.547,4.786,9.513,8.8,12.88a4.974,4.974,0,0,0,6.4,0C19.214,18.48,24,13.514,24,8.967A6.8,6.8,0,0,0,17.5,1.917Zm-3.585,18.4a2.973,2.973,0,0,1-3.83,0C4.947,16.006,2,11.87,2,8.967a4.8,4.8,0,0,1,4.5-5.05A4.8,4.8,0,0,1,11,8.967a1,1,0,0,0,2,0,4.8,4.8,0,0,1,4.5-5.05A4.8,4.8,0,0,1,22,8.967C22,11.87,19.053,16.006,13.915,20.313Z"></path>
                                     </svg>
                                     <svg xmlns="http://www.w3.org/2000/svg" class="svg-filled" viewBox="0 0 24 24">
-                                        <path d="M17.5,1.917a6.4,6.4,0,0,0-5.5,3.3,6.4,6.4,0,0,0-5.5-3.3A6.8,6.8,0,0,0,0,8.967c0,4.547,4.786,9.513,8.8,12.88a4.974,4.974,0,0,0,6.4,0C19.214,18.48,24,13.514,24,8.967A6.8,6.8,0,0,0,17.5,1.917Z">
-                                        </path>
+                                        <path d="M17.5,1.917a6.4,6.4,0,0,0-5.5,3.3,6.4,6.4,0,0,0-5.5-3.3A6.8,6.8,0,0,0,0,8.967c0,4.547,4.786,9.513,8.8,12.88a4.974,4.974,0,0,0,6.4,0C19.214,18.48,24,13.514,24,8.967A6.8,6.8,0,0,0,17.5,1.917Z"></path>
                                     </svg>
                                     <svg xmlns="http://www.w3.org/2000/svg" height="100" width="100" class="svg-celebrate">
                                         <polygon points="10,10 20,20"></polygon>
@@ -259,8 +256,30 @@
                                 </div>
                             </div>
                         </div>
+                        
+                    </div>
+                    <!-- Thêm phần số lượt view -->
+                    <div class="view-count">
+                        <i class="fa-solid fa-eye" style="color:black;  width:20px;height:20px;" ></i>
+                        <span style="color:black;">@product.Interactions.NumberOfViews</span>
+                    </div>
+
+                    <div class="like-dislike-container">
+                        <!-- Like và Dislike -->
+                        <form asp-action="IncreaseLikeProduct" asp-controller="Product" method="post" style="display:inline;">
+                            <input type="hidden" name="productID" value="@product.Id" />
+                            <span id="like-count-@product.Id" class="like-count" style="color:black;">@product.Interactions.NumberOfLikes</span>
+                            <i class="fa-solid fa-thumbs-up like-icon" style="color:black; width:20px;height:20px;"></i>
+                        </form>
+
+                        <form asp-action="DecreaseLikeProduct" asp-controller="Product" method="post" style="display:inline;">
+                            <input type="hidden" name="productID" value="@product.Id" />
+                            <span id="dislike-count-@product.Id" class="dislike-count" style="color:black;">@product.Interactions.NumberOfDisLikes</span>
+                            <i class="fa-solid fa-thumbs-down dislike-icon" style="color:black; width:20px;height:20px;"></i>
+                        </form>
                     </div>
                 </div>
+
 
             }
         }
@@ -354,6 +373,27 @@
                                     </div>
                                 </div>
                             </div>
+                            
+                        </div>
+                        <!-- Thêm phần số lượt view -->
+                        <div class="view-count">
+                                    <i class="fa-solid fa-eye" style="color:black;  width:20px;height:20px;" ></i>
+                            <span style="color:black;">@product.Interactions.NumberOfViews</span>
+                        </div>
+
+                        <div class="like-dislike-container">
+                            <!-- Like và Dislike -->
+                            <form asp-action="IncreaseLikeProduct" asp-controller="Product" method="post" style="display:inline;">
+                                <input type="hidden" name="productID" value="@product.Id" />
+                                <span id="like-count-@product.Id" class="like-count" style="color:black;">@product.Interactions.NumberOfLikes</span>
+                                <i class="fa-solid fa-thumbs-up like-icon" style="color:black; width:20px;height:20px;"></i>
+                            </form>
+
+                            <form asp-action="DecreaseLikeProduct" asp-controller="Product" method="post" style="display:inline;">
+                                <input type="hidden" name="productID" value="@product.Id" />
+                                <span id="dislike-count-@product.Id" class="dislike-count" style="color:black;">@product.Interactions.NumberOfDisLikes</span>
+                                <i class="fa-solid fa-thumbs-down dislike-icon" style="color:black; width:20px;height:20px;"></i>
+                            </form>
                         </div>
                     </div>
                 }
@@ -428,6 +468,26 @@
                                 </div>
                             </div>
                         </div>
+                        <!-- Thêm phần số lượt view -->
+                        <div class="view-count">
+                            <i class="fa-solid fa-eye" style="color:black;  width:20px;height:20px;"></i>
+                            <span style="color:black;">@product.Interactions.NumberOfViews</span>
+                        </div>
+
+                        <div class="like-dislike-container">
+                            <!-- Like và Dislike -->
+                            <form asp-action="IncreaseLikeProduct" asp-controller="Product" method="post" style="display:inline;">
+                                <input type="hidden" name="productID" value="@product.Id" />
+                                <span id="like-count-@product.Id" class="like-count" style="color:black;">@product.Interactions.NumberOfLikes</span>
+                                <i class="fa-solid fa-thumbs-up like-icon" style="color:black; width:20px;height:20px;"></i>
+                            </form>
+
+                            <form asp-action="DecreaseLikeProduct" asp-controller="Product" method="post" style="display:inline;">
+                                <input type="hidden" name="productID" value="@product.Id" />
+                                <span id="dislike-count-@product.Id" class="dislike-count" style="color:black;">@product.Interactions.NumberOfDisLikes</span>
+                                <i class="fa-solid fa-thumbs-down dislike-icon" style="color:black; width:20px;height:20px;"></i>
+                            </form>
+                        </div>
                     </div>
                 }
             }
@@ -498,6 +558,26 @@
                                     </div>
                                 </div>
                             </div>
+                        </div>
+                        <!-- Thêm phần số lượt view -->
+                        <div class="view-count">
+                            <i class="fa-solid fa-eye" style="color:black;  width:20px;height:20px;"></i>
+                            <span style="color:black;">@product.Interactions.NumberOfViews</span>
+                        </div>
+
+                        <div class="like-dislike-container">
+                            <!-- Like và Dislike -->
+                            <form asp-action="IncreaseLikeProduct" asp-controller="Product" method="post" style="display:inline;">
+                                <input type="hidden" name="productID" value="@product.Id" />
+                                <span id="like-count-@product.Id" class="like-count" style="color:black;">@product.Interactions.NumberOfLikes</span>
+                                <i class="fa-solid fa-thumbs-up like-icon" style="color:black; width:20px;height:20px;"></i>
+                            </form>
+
+                            <form asp-action="DecreaseLikeProduct" asp-controller="Product" method="post" style="display:inline;">
+                                <input type="hidden" name="productID" value="@product.Id" />
+                                <span id="dislike-count-@product.Id" class="dislike-count" style="color:black;">@product.Interactions.NumberOfDisLikes</span>
+                                <i class="fa-solid fa-thumbs-down dislike-icon" style="color:black; width:20px;height:20px;"></i>
+                            </form>
                         </div>
                     </div>
                 }
@@ -575,6 +655,26 @@
                                     </div>
                                 </div>
                             </div>
+                        </div>
+                        <!-- Thêm phần số lượt view -->
+                        <div class="view-count">
+                            <i class="fa-solid fa-eye" style="color:black;  width:20px;height:20px;"></i>
+                            <span style="color:black;">@product.Interactions.NumberOfViews</span>
+                        </div>
+
+                        <div class="like-dislike-container">
+                            <!-- Like và Dislike -->
+                            <form asp-action="IncreaseLikeProduct" asp-controller="Product" method="post" style="display:inline;">
+                                <input type="hidden" name="productID" value="@product.Id" />
+                                <span id="like-count-@product.Id" class="like-count" style="color:black;">@product.Interactions.NumberOfLikes</span>
+                                <i class="fa-solid fa-thumbs-up like-icon" style="color:black; width:20px;height:20px;"></i>
+                            </form>
+
+                            <form asp-action="DecreaseLikeProduct" asp-controller="Product" method="post" style="display:inline;">
+                                <input type="hidden" name="productID" value="@product.Id" />
+                                <span id="dislike-count-@product.Id" class="dislike-count" style="color:black;">@product.Interactions.NumberOfDisLikes</span>
+                                <i class="fa-solid fa-thumbs-down dislike-icon" style="color:black; width:20px;height:20px;"></i>
+                            </form>
                         </div>
                     </div>
                 }
