--- a/Project/Client/Views/Product/Collection.cshtml
+++ b/Project/Client/Views/Product/Collection.cshtml
@@ -104,6 +104,10 @@
                 </a>
             }
         }
+        else
+        {
+            <p>khong co library</p>
+        }
     </div>
 </div>
 
@@ -127,6 +131,10 @@
 
             }
 
+        }
+        else
+        {
+            <p>khong co wishlist</p>
         }
 
     </div>
