Update Báo cáo, view Collection, view OrderManager

--- a/Project/Client/Views/Admin/_OrderItemsPartial.cshtml
+++ b/Project/Client/Views/Admin/_OrderItemsPartial.cshtml
@@ -29,38 +29,54 @@
                 }
 
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                <div class="row">
+                <div class="row" >
                     <form method="get" class="col" readonly>
                         @if (Model.Items != null)
                         {
                             @foreach (var item in Model.Items)
                             {
-
-                                <div class="mb-2">
-                                    <label class="form-label">Product Id</label>
-                                    <input type="text" readonly asp-for="@item.ProductId" class="form-control">
-                                    <span class="text-danger" asp-validation-for="@item.ProductId"></span>
+                                <div style="border: 2px solid #00A97F;padding: 5px 10px; border-radius:5px;">
+                                    <div class="row">
+                                        <div class="col-md-6">
+                                            <div class="mb-2">
+                                                <label class="form-label fw-bold" style="color:#00A97F">Product Id</label>
+                                                <input type="text" readonly asp-for="@item.ProductId" class="form-control">
+                                                <span class="text-danger" asp-validation-for="@item.ProductId"></span>
+                                            </div>
+                                        </div>
+                                        <div class="col-md-6">
+                                            <div class="mb-2">
+                                                <label class="form-label fw-bold" style="color:#00A97F">Publisher Name</label>
+                                                <input type="text" readonly asp-for="@item.PublisherName" class="form-control">
+                                                <span class="text-danger" asp-validation-for="@item.PublisherName"></span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="row mt-2">
+                                        <div class="col-md-4">
+                                            <div class="mb-2">
+                                                <label class="form-label fw-bold" style="color:#00A97F">Product name</label>
+                                                <input type="text" readonly asp-for="@item.ProductName" class="form-control">
+                                                <span class="text-danger" asp-validation-for="@item.ProductName"></span>
+                                            </div>
+                                        </div>
+                                        <div class="col-md-4">
+                                            <div class="mb-2">
+                                                <label class="form-label fw-bold" style="color:#00A97F">Total price</label>
+                                                <input type="text" readonly asp-for="@item.TotalPrice" class="form-control">
+                                                <span class="text-danger" asp-validation-for="@item.TotalPrice"></span>
+                                            </div>
+                                        </div>
+                                        <div class="col-md-4">
+                                            <div class="mb-2">
+                                                <label class="form-label fw-bold" style="color:#00A97F">Publisher Quantity</label>
+                                                <input type="number" readonly asp-for="@item.Quantity" class="form-control">
+                                                <span class="text-danger" asp-validation-for="@item.Quantity"></span>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
-                                <div class="mb-2">
-                                    <label class="form-label">Product name</label>
-                                    <input type="text" readonly asp-for="@item.ProductName" class="form-control">
-                                    <span class="text-danger" asp-validation-for="@item.ProductName"></span>
-                                </div>
-                                <div class="mb-2">
-                                    <label class="form-label">Total price</label>
-                                    <input type="text" readonly asp-for="@item.TotalPrice" class="form-control">
-                                    <span class="text-danger" asp-validation-for="@item.TotalPrice"></span>
-                                </div>
-                                <div class="mb-2">
-                                    <label class="form-label">Publisher Name</label>
-                                    <input type="text" readonly asp-for="@item.PublisherName" class="form-control">
-                                    <span class="text-danger" asp-validation-for="@item.PublisherName"></span>
-                                </div>
-                                <div class="mb-2">
-                                    <label class="form-label">Publisher Quantity</label>
-                                    <input type="number" readonly asp-for="@item.Quantity" class="form-control">
-                                    <span class="text-danger" asp-validation-for="@item.Quantity"></span>
-                                </div>
+                                
                                 <hr>
                                 <br />
                             }
